Incorporate PR suggestions and other small improvements