@@ -43,7 +43,6 @@ import org.apache.accumulo.testing.performance.util.TestData;
 import org.apache.accumulo.testing.performance.util.TestExecutor;
 import org.apache.hadoop.io.Text;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
 
 public class ScanExecutorPT implements PerformanceTest {
@@ -70,19 +69,16 @@ public class ScanExecutorPT implements PerformanceTest {
 
     siteCfg.put(Property.TSERV_SCAN_MAX_OPENFILES.getKey(), "200");
     siteCfg.put(Property.TSERV_MINTHREADS.getKey(), "200");
-    siteCfg.put(Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se1.threads",
-        SCAN_EXECUTOR_THREADS);
-    siteCfg.put(Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se1.prioritizer",
-        SCAN_PRIORITIZER);
-    siteCfg.put(
-        Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se1.prioritizer.opts.priority.short", "1");
-    siteCfg.put(
-        Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se1.prioritizer.opts.priority.long", "2");
 
-    siteCfg.put(Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se2.threads",
-        SCAN_EXECUTOR_THREADS);
-    siteCfg.put(Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey() + "se2.prioritizer",
-        SCAN_PRIORITIZER);
+    final String tservSEprefix = Property.TSERV_SCAN_EXECUTORS_PREFIX.getKey();
+
+    siteCfg.put(tservSEprefix + "se1.threads", SCAN_EXECUTOR_THREADS);
+    siteCfg.put(tservSEprefix + "se1.prioritizer", SCAN_PRIORITIZER);
+    siteCfg.put(tservSEprefix + "se1.prioritizer.opts.priority.short", "1");
+    siteCfg.put(tservSEprefix + "se1.prioritizer.opts.priority.long", "2");
+
+    siteCfg.put(tservSEprefix + "se2.threads", SCAN_EXECUTOR_THREADS);
+    siteCfg.put(tservSEprefix + "se2.prioritizer", SCAN_PRIORITIZER);
 
     return new SystemConfiguration().setAccumuloConfig(siteCfg);
   }
@@ -90,28 +86,29 @@ public class ScanExecutorPT implements PerformanceTest {
   @Override
   public Report runTest(Environment env) throws Exception {
 
-    String tableName = "scept";
+    AccumuloClient client = env.getClient();
+
+    final String tableName = "scept";
 
     Map<String,String> props = new HashMap<>();
     props.put(Property.TABLE_SCAN_DISPATCHER_OPTS.getKey() + "executor", "se1");
     props.put(Property.TABLE_SCAN_DISPATCHER_OPTS.getKey() + "executor.dedicated", "se2");
     props.put(Property.TABLE_BLOCKCACHE_ENABLED.getKey(), "true");
 
-    env.getClient().tableOperations().create(tableName,
-        new NewTableConfiguration().setProperties(props));
+    client.tableOperations().create(tableName, new NewTableConfiguration().setProperties(props));
 
     long t1 = System.currentTimeMillis();
-    TestData.generate(env.getClient(), tableName, NUM_ROWS, NUM_FAMS, NUM_QUALS);
+    TestData.generate(client, tableName, NUM_ROWS, NUM_FAMS, NUM_QUALS);
     long t2 = System.currentTimeMillis();
-    env.getClient().tableOperations().compact(tableName, null, null, true, true);
+    client.tableOperations().compact(tableName, null, null, true, true);
     long t3 = System.currentTimeMillis();
 
     AtomicBoolean stop = new AtomicBoolean(false);
 
-    TestExecutor<Long> longScans = startLongScans(env, tableName, stop);
+    TestExecutor<Long> longScans = startLongScans(client, tableName, stop);
 
-    LongSummaryStatistics shortStats1 = runShortScans(env, tableName, 50000);
-    LongSummaryStatistics shortStats2 = runShortScans(env, tableName, 100000);
+    LongSummaryStatistics shortStats1 = runShortScans(client, tableName, 50000);
+    LongSummaryStatistics shortStats2 = runShortScans(client, tableName, 100000);
 
     stop.set(true);
     long t4 = System.currentTimeMillis();
@@ -182,10 +179,11 @@ public class ScanExecutorPT implements PerformanceTest {
     return count;
   }
 
-  private LongSummaryStatistics runShortScans(Environment env, String tableName, int numScans) {
+  private LongSummaryStatistics runShortScans(AccumuloClient client, String tableName,
+      int numScans) {
 
-    Map<String,String> dHints = ImmutableMap.of("scan_type", "dedicated");
-    Map<String,String> sHints = ImmutableMap.of("scan_type", "short");
+    Map<String,String> execHints = Map.of("scan_type", "dedicated");
+    Map<String,String> prioHints = Map.of("scan_type", "short");
 
     try (TestExecutor<Long> executor = new TestExecutor<>(NUM_SHORT_SCANS_THREADS)) {
       Random rand = new Random();
@@ -196,20 +194,21 @@ public class ScanExecutorPT implements PerformanceTest {
         // scans have a 20% chance of getting dedicated thread pool and 80% chance of getting high
         // priority
         Map<String,String> hints = rand.nextInt(10) <= 1 ? execHints : prioHints;
-        executor.submit(() -> scan(tableName, env.getClient(), row, fam, hints));
+        executor.submit(() -> scan(tableName, client, row, fam, hints));
       }
 
       return executor.stream().mapToLong(l -> l).summaryStatistics();
     }
   }
 
-  private TestExecutor<Long> startLongScans(Environment env, String tableName, AtomicBoolean stop) {
+  private TestExecutor<Long> startLongScans(AccumuloClient client, String tableName,
+      AtomicBoolean stop) {
     Map<String,String> hints = Map.of("scan_type", "long");
 
     TestExecutor<Long> longScans = new TestExecutor<>(NUM_LONG_SCANS);
 
     for (int i = 0; i < NUM_LONG_SCANS; i++) {
-      longScans.submit(() -> scan(tableName, env.getClient(), stop, hints));
+      longScans.submit(() -> scan(tableName, client, stop, hints));
     }
     return longScans;
   }
